common/styles/scss/app.scss
/* ... */
.top-scroll-wrapper {
    overflow-x: auto;
    overflow-y: hidden;
    height: 15px;
    position: sticky;
    width: -moz-available;
    width: -webkit-fill-available;
    z-index: 2;
    top: 0;
}

.top-scroll {
    height: inherit;
    overflow-x: scroll;
}

